# Sorting-Algorithms-Visualizer

./: CMakeLists.txt  README.md
Sorter/: App.cpp  App.h  CMakeLists.txt  Constants.h  Controller.cpp  Controller.h  FileProcessor.cpp  FileProcessor.h  Interface.cpp  Interface.h  Random.cpp  Random.h  WindowsConfig.h  main.cpp
Sorter/Algorithms/: Algorithm.cpp  Algorithm.h  Heapsort.cpp  Heapsort.h  QuickSort.cpp  QuickSort.h  SmoothSort.cpp  SmoothSort.h  Statistic.cpp  Statistic.h
Sorter/Resources/: Ubuntu-M.hpp  icon.hpp  icons.hpp
